Finished travis and gradle setup

--- a/report/index.html
+++ b/report/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="1; url=build/reports/buildDashboard/">
-    <script type="text/javascript">
-        window.location.href = "build/reports/buildDashboard/"
-    </script>
-    <title>Page Redirection</title>
+    <title>Documentation and Reports</title>
 </head>
 <body>
-If you are not redirected automatically, follow this <a href='build/reports/buildDashboard/'>link</a>.
+<h1>Documentation and Reports</h1>
+<ul>
+    <li>Reports: <a href='build/reports/buildDashboard/'>link</a></li>
+    <li>Scaladoc: <a href='build/docs/scaladoc/'>link</a></li>
+</ul>
 </body>
 </html>
