--- a/report/index.html
+++ b/report/index.html
@@ -8,7 +8,7 @@
 <h1>Documentation and Reports</h1>
 <ul>
     <li>Reports: <a href='build/reports/buildDashboard/'>link</a></li>
-    <li>Scaladoc: <a href='build/scaladoc/'>link</a></li>
+    <li>Scaladoc: <a href='build/docs/scaladoc/'>link</a></li>
 </ul>
 </body>
 </html>
